# Flamingo

./: README.md
python/: pyproject.toml
python/eventbus/: api.py  events.py  models.py  push_events.py  redis.py
python/eventbus/data/: envelope.py  events.py  partition_key.py
python/eventbus/t/: test_api.py  test_redis.py
python/reporting/: api.py
python/reporting/t/: test_api.py
