[tool.poetry]
name = "flamingo"
version = "0.1.0"
description = ""
authors = ["nss"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
pytest = "^7.1.2"
requests = "^2.28.1"
Faker = "^13.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
